NIFI-3364 Changed unit tests to use List.of() and remove .value extension.